@@ -3,8 +3,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
-- SetEnv PATH is broken
-
 - need to check return value from ap_setup_client_block
 
 - mod_perl_version.h should not be directly written to
